# Assignment01---Topsis

./: README.md  data.csv  output-result.csv  topsis.py
Topsis-Saksham-102303892/: LICENSE  README.md  pyproject.toml  setup.py
Topsis-Saksham-102303892/topsis_saksham_102303892/: topsis.py
Topsis-Saksham-102303892/topsis_saksham_102303892.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
topsis-web-service/: .env.example  .gitignore  README.md  app.py  requirements.txt
topsis-web-service/templates/: index.html
